--- a/package.json
+++ b/package.json
@@ -9,15 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "@next/font": "13.4.19",
     "@types/node": "20.6.1",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "autoprefixer": "^10.4.15",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
+    "postcss": "^8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwindcss": "^3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.9.4",
+    "@vercel/og": "^0.5.13",
+    "add": "^2.0.6",
+    "leaflet": "^1.9.4",
+    "leaflet-easybutton": "^2.4.0",
+    "react-leaflet": "^4.2.1"
   }
 }
